--- a/www/index.html
+++ b/www/index.html
@@ -25,26 +25,26 @@
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/common.js"></script>
+    <!--<script src="js/app.js"></script>-->
+    <!--<script src="js/controllers.js"></script>-->
+    <!--<script src="js/common.js"></script>-->
 
 
-    <script src="templates/login/js/controller.js"></script>
-    <script src="templates/subjects/js/controller.js"></script>
-    <script src="templates/messages/js/controller.js"></script>
-    <script src="templates/chat/js/controller.js"></script>
-    <script src="templates/profile/js/controller.js"></script>
-    <script src="templates/blockedUsers/js/controller.js"></script>
-    <script src="js/services/chat-service.js"></script>
-    <script src="js/services/configuration-service.js"></script>
-    <script src="js/services/entity-sevice.js"></script>
-    <script src="js/services/firebase-service.js"></script>
-    <script src="js/services/messages-service.js"></script>
-    <script src="js/services/notification-service.js"></script>
-    <script src="js/services/subject-service.js"></script>
-    <script src="js/services/user-service.js"></script>
-
+    <!--<script src="templates/login/js/controller.js"></script>-->
+    <!--<script src="templates/subjects/js/controller.js"></script>-->
+    <!--<script src="templates/messages/js/controller.js"></script>-->
+    <!--<script src="templates/chat/js/controller.js"></script>-->
+    <!--<script src="templates/profile/js/controller.js"></script>-->
+    <!--<script src="templates/blockedUsers/js/controller.js"></script>-->
+    <!--<script src="js/services/chat-service.js"></script>-->
+    <!--<script src="js/services/configuration-service.js"></script>-->
+    <!--<script src="js/services/entity-sevice.js"></script>-->
+    <!--<script src="js/services/firebase-service.js"></script>-->
+    <!--<script src="js/services/messages-service.js"></script>-->
+    <!--<script src="js/services/notification-service.js"></script>-->
+    <!--<script src="js/services/subject-service.js"></script>-->
+    <!--<script src="js/services/user-service.js"></script>-->
+    <script src="jsBuild/app.min.js"></script>
 
 
   </head>
