--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/services/messages-service.js"></script>
     <script src="js/services/notification-service.js"></script>
     <script src="js/services/subject-service.js"></script>
+    <script src="js/services/match-service.js"></script>
     <script src="js/services/user-service.js"></script>
     <!--<script src="jsBuild/app.min.js"></script>-->
 
