--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,9 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
-
+    <script src="lib/angular-identicon/dist/angular-identicon.min.js"></script>
+    <script src="lib/identicon/pnglib.js"></script>
+    <script src="lib/identicon/identicon.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
